...
            "value" : "Group"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Группа"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Група"
...
            "value" : "Profile"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Профиль"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Профіль"
...
            "value" : "Schedule"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Расписание"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Розклад"
...
